fix LID colors on IE

--- a/web/themes/custom/legacy/css/src/__settings.conf-colors.less
+++ b/web/themes/custom/legacy/css/src/__settings.conf-colors.less
@@ -138,9 +138,9 @@
 
 // EWRI LID 2018
 // class .lidconference
-@color-lid-primary:   #426298;
-@color-lid-secondary: #d8763d;
-@color-lid-accent:    #765c79;
+@color-lid-primary:   #39629d;
+@color-lid-secondary: #5592e9;
+@color-lid-accent:    #e8702a;
 
 // EWRI OMSW (stormwater)
 // class .omswconference
